--- a/package.json
+++ b/package.json
@@ -10,12 +10,32 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "@hookform/resolvers": "^3.3.4",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slot": "^1.0.2",
+    "axios": "^1.6.8",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "firebase": "^10.9.0",
+    "lucide-react": "^0.363.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-firebase-hooks": "^5.1.1",
+    "react-hook-form": "^7.51.1",
+    "react-router-dom": "^6.22.3",
+    "sqli-react-virtualized-list": "^3.0.0",
+    "swiper": "^11.0.7",
+    "tailwind-merge": "^2.2.2",
+    "tailwindcss-animate": "^1.0.7",
+    "uuid": "^9.0.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/node": "^20.11.30",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
@@ -28,6 +48,7 @@
     "prettier-plugin-tailwind-css": "^1.5.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.2.2",
+    "uuid": "^9.0.1",
     "vite": "^5.2.0"
   }
 }
